<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mbobiosio.moviesboard.ui.fragment.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mbobiosio.moviesboard.ui.fragment.SeriesFragment"
        android:label="@string/title_nav_discover"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mbobiosio.moviesboard.ui.notifications.NotificationsFragment"
        android:label="@string/title_nav_artists"
        tools:layout="@layout/fragment_notifications" />
</navigation>