<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cerminnovations.moviesboard.presentation.home.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_popular_movies"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cerminnovations.moviesboard.presentation.series.SeriesFragment"
        android:label="@string/title_nav_discover"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cerminnovations.moviesboard.ui.fragment.ArtistsFragment"
        android:label="@string/title_nav_artists"
        tools:layout="@layout/fragment_artists" />

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.cerminnovations.moviesboard.presentation.moviedetail.MovieDetailFragment"
        tools:layout="@layout/fragment_movie_detail">

        <argument
            android:name="movieDetail"
            app:argType="com.cerminnovations.domain.model.movies.MovieData" />
    </fragment>

    <fragment
        android:id="@+id/seriesDetailFragment"
        android:name="com.cerminnovations.moviesboard.presentation.seriesdetail.SeriesDetailFragment"
        tools:layout="@layout/fragment_series_details">

        <argument
            android:name="seriesDetail"
            app:nullable="true"
            app:argType="com.cerminnovations.domain.model.series.TvSeries"/>
    </fragment>
</navigation>