<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/popular"
            android:textAlignment="center"
            android:textColor="?colorOnBackground"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/viewAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewAll" />

        <Button
            android:id="@+id/viewAll"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/view_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="start"
            android:background="?colorSurface"
            android:hint="@string/categories"
            android:padding="@dimen/_8sdp"
            android:textColor="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_home"
            app:layout_constraintTop_toBottomOf="@+id/viewAll"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_arrow_tint="?colorOnSurface"
            app:spinner_item_array="@array/series"
            app:spinner_popup_animation="bounce"
            app:spinner_popup_background="@color/colorBackground"
            app:spinner_popup_elevation="14dp"
            tools:ignore="UnusedAttribute" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/series"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categories"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_series"
            tools:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>